--- a/src/app.scss
+++ b/src/app.scss
@@ -1,33 +1,64 @@
 // Variables
-$color-gray: darken(#e9ecef, 60%);
-$color-gold: #ffc107;
+$color-primary: #ffc107;
+$color-black: black;
+$color-white: white;
+$default-font-color: darken(#e9ecef, 60%);
+$box-shadow-standard: 0.5rem 0.5rem 0.5rem rgba($color-black, 0.3);
+$border-radius-standard: 0.3rem;
 
-.App {
+// Mixins
+@mixin container-settings {
+  padding: 1rem 2rem;
+  box-shadow: $box-shadow-standard;
+  border-radius: $border-radius-standard;
+  background-color: $color-white;
+  color: $default-font-color;
+}
+
+// Utilities
+.center {
+  text-align: center;
+}
+
+.font-large {
+  font-size: 2rem;
+}
+
+// App
+.app {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   flex-direction: column;
-  // background-color: #dbc199;
-  // background-image: url("../public/img/photo-1524769490-6d12a683d9ee-Stephane-Yaich.jpeg");
+  background-color: $color-primary;
 }
 
-.welcome {
-  & > button {
-    margin-right: 1rem;
+.jumbotron {
+  box-shadow: $box-shadow-standard;
+}
+
+.navbar {
+  background-color: #4f6367;
+  margin-bottom: 1rem;
+  box-shadow: $box-shadow-standard;
+  color: #eee;
+  border-radius: $border-radius-standard;
+
+  &--logo {
+    font-size: 2.5rem;
   }
 }
 
 .wizard {
-  border: 1px solid silver;
-  padding: 1rem 2rem;
-  box-shadow: 0.5rem 0.5rem 0.5rem rgba(black, 0.3);
-  border-radius: 3px;
-  color: $color-gray;
+  &--container {
+    @include container-settings;
+  }
+
   &--header {
     margin-bottom: 0.5rem;
     transition: all 0.5s ease-in-out;
-    color: rgba(black, 0.7);
+    color: rgba($color-black, 0.7);
     &-icon {
       font-size: 2rem;
       padding-right: 1rem;
@@ -36,8 +67,8 @@ $color-gold: #ffc107;
       font-size: 2rem;
     }
     &:hover {
-      color: $color-gold;
-      text-shadow: 0.1rem 0.1rem 2rem rgba($color-gold, 0.3);
+      color: $color-primary;
+      text-shadow: 0.1rem 0.1rem 2rem rgba($color-primary, 0.3);
     }
   }
 
@@ -47,6 +78,7 @@ $color-gold: #ffc107;
     background: transparent;
     border-radius: 50px;
   }
+
   &--step {
     margin: 1rem 0;
     &-header {
@@ -55,22 +87,39 @@ $color-gold: #ffc107;
       margin-bottom: 0.5rem;
     }
     &-form {
-      min-height: 215px;
-      // height: 200px;
+      min-height: 250px;
     }
-
-    &-01 {
-    }
-    &-2 {
-    }
-    &-3 {
-    }
-    &-4 {
+    &-cost {
+      font-size: 1.3rem;
+      padding: 1.5rem 0rem;
+      font-weight: 500;
     }
   }
+
   &--buttons {
     &-prev {
       margin-right: 1rem;
     }
+  }
+}
+
+.label {
+  &--container {
+    @include container-settings;
+  }
+  &--header {
+    margin-bottom: 1rem;
+    color: rgba($color-black, 0.7);
+    font-size: 1.3rem;
+  }
+  &--sticker {
+    border: 1px solid $color-black;
+    border-radius: $border-radius-standard;
+    padding: 0.5rem;
+  }
+  &--option {
+    margin: 0.2 0.5rem;
+    font-size: 2rem;
+    font-weight: 500;
   }
 }
