--- a/src/app.scss
+++ b/src/app.scss
@@ -20,8 +20,16 @@ $border-radius-standard: 0.3rem;
   text-align: center;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .font-large {
   font-size: 2rem;
+}
+
+.right {
+  text-align: right;
 }
 
 // App
