--- a/src/app.scss
+++ b/src/app.scss
@@ -69,17 +69,17 @@ $border-radius-standard: 0.3rem;
   color: #eee;
   border-radius: $border-radius-standard;
 
-  &--logo {
+  &__logo {
     font-size: 2.5rem;
   }
 }
 
 .wizard {
-  &--container {
+  &__container {
     @include container-settings;
   }
 
-  &--header {
+  &__header {
     margin-bottom: 0.5rem;
     transition: all 0.5s ease-in-out;
     color: rgba($color-black, 0.7);
@@ -96,14 +96,14 @@ $border-radius-standard: 0.3rem;
     }
   }
 
-  &--progress {
+  &__progress {
     margin-bottom: 0.5rem;
     border: 1px solid silver;
     background: transparent;
     border-radius: 50px;
   }
 
-  &--step {
+  &__step {
     margin: 1rem 0;
     &-header {
       font-size: 1.2rem;
@@ -120,7 +120,7 @@ $border-radius-standard: 0.3rem;
     }
   }
 
-  &--buttons {
+  &__buttons {
     &-prev {
       margin-right: 1rem;
     }
@@ -128,20 +128,20 @@ $border-radius-standard: 0.3rem;
 }
 
 .label {
-  &--container {
+  &__container {
     @include container-settings;
   }
-  &--header {
+  &__header {
     margin-bottom: 1rem;
     color: rgba($color-black, 0.7);
     font-size: 1.3rem;
   }
-  &--sticker {
+  &__sticker {
     border: 1px solid $color-black;
     border-radius: $border-radius-standard;
     padding: 0.5rem;
   }
-  &--option {
+  &__option {
     margin: 0.2 0.5rem;
     font-size: 2rem;
     font-weight: 500;
