Added print button for printing the window and require attr for username and pw

--- a/src/app.scss
+++ b/src/app.scss
@@ -40,6 +40,10 @@ $border-radius-standard: 0.3rem;
   margin-bottom: 1rem !important;
 }
 
+.margin-right-small {
+  margin-right: 1rem !important;
+}
+
 // App
 .app {
   display: flex;
